# tensorflow_xla

./: .gitignore  CMakeLists.txt  GradientDescentOptimizer.h  Main.cpp  README.md  arithmetic.cc  arithmetic.h  array.h  array1d.h  array2d.cc  array2d.h  array2d_test.cc  array3d.h  array3d_test.cc  array4d.h  array4d_test.cc  array_slice.h  array_slice_internal.h  array_test.cc  base.h  bitmap.cc  bitmap.h  bits.h  cleanup.h  client_library_test_base.cc  client_library_test_base.h  computation.cc  computation.h  computation_builder.cc  computation_builder.h  convolution_test.cc  convolution_variants_test.cc  core_status.cc  core_status.h  cpu_info.cc  cpu_info.h  default_logging.cc  default_logging.h  edit_distance.h  eigen_pooling_test.cc  (+94 more)
docs/: cbow.py  feedforward.py  nn.docx
examples/: CMakeLists.txt  example-00.cpp  example-01.cpp  example-02.cpp  nnet_test.cc
examples/mnist/: CMakeLists.txt  reader.cpp
examples/not-mnist/: CMakeLists.txt
examples/notmnist/: CMakeLists.txt  reader.cpp
google/: CMakeLists.txt  google_arena.cc  google_arena.h  google_arenastring.cc  google_arenastring.h  google_atomic_sequence_num.h  google_atomicops.h  google_atomicops_internals_x86_gcc.cc  google_atomicops_internals_x86_msvc.cc  google_callback.h  google_casts.h  google_common.cc  google_common.h  google_fastmem.h  google_generated_message_util.cc  google_generated_message_util.h  google_has_bits.h  google_logging.h  google_macros.h  google_mutex.h  google_once.cc  google_once.h  google_platform_macros.h  google_port.h  google_repeated_field.cc  google_repeated_field.h  google_repeated_ptr_iterator.h  google_scoped_ptr.h  google_type_handler.h  google_type_traits.h  gtest-message1.h  gtest-port1.h
miscellaneous/: hlo_instruction.cc  hlo_instruction.h  max_pool.h  pooling_ops.h
py-examples/: ffnn-xor.py  test.py  test_3-cross_entropy.py
strings/: stringprintf.cc  stringprintf.h
tests/: constants_test.cc  matrix_ops_simple_test.cc  test.py  test_2-cross_entropy.py  transpose_test.cc
training/: convolution_folding.cc  convolution_folding_test.cc  convolution_thunk.cc  convolution_thunk.h  core_kernel_training_ops.cc  core_kernel_training_ops.h  core_ops_training_ops.cc  core_ops_training_ops_test.cc
